--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ A:hover
 }
 
 .carrusel {
-    background-color: #B52846;
+    /*background-color: #B52846;*/
     box-shadow: 0 0 10px 0 #B52846;
 }
 
